--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -86,3 +86,6 @@ jobs:
         YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
         GH_PAT: ${{ secrets.GH_PAT }}
       run: oj-verify all
+
+permissions:
+  contents: write
